--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>g_zhoudq</groupId>
     <artifactId>spring</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>ch3</module>
+    </modules>
     <dependencies>
         <dependency>
             <groupId>org.springframework</groupId>
